# chapterizer

./: .gitignore  blocktest.cpp  bookmaker.cpp  bookparser.cpp  bookparser.hpp  capypdfrenderer.cpp  capypdfrenderer.hpp  chapterbuilder.cpp  chapterbuilder.hpp  chaptercommon.hpp  chapterformatter.cpp  chapterformatter.hpp  devtool.cpp  draftpaginator.cpp  draftpaginator.hpp  draftparagraphformatter.cpp  draftparagraphformatter.hpp  epub.cpp  epub.hpp  fchelpers.cpp  fchelpers.hpp  formatting.cpp  formatting.hpp  fttest.cpp  guidata.hpp  guilayout.cmb  guilayout.ui  guitool.cpp  hbfontcache.cpp  hbfontcache.hpp  hbmeasurer.cpp  hbmeasurer.hpp  hbtest.cpp  hbtesting.cpp  icutest.cpp  main.cpp  mdtool.cpp  meson.build  metadata.cpp  metadata.hpp  (+32 more)
subprojects/: capypdf.wrap
testdoc/: book.css  chapter1.bd  chapter2.bd  chapterlong.bd  colophon.txt  credits.txt  dedication.txt  largesample.json  postcredits.txt  sample.json  signing.txt
